# php-cmake

cmake/: CMakeLists.txt  ConfigureChecks.cmake
cmake/CMake/: ConfigureFileIn.cmake  FindBISON.cmake  FindRE2C.cmake
cmake/CMake/php/: PHP_INTERNAL_FUNCTIONS.cmake  PHP_Version.cmake
cmake/TSRM/: CMakeLists.txt
cmake/Zend/: CMakeLists.txt
cmake/ext/: CMakeLists.txt
cmake/ext/ctype/: CMakeLists.txt
cmake/ext/date/: CMakeLists.txt
cmake/ext/date/lib/: timelib_config.h.cmake
cmake/ext/dom/: CMakeLists.txt
cmake/ext/fileinfo/: CMakeLists.txt
cmake/ext/filter/: CMakeLists.txt
cmake/ext/hash/: CMakeLists.txt
cmake/ext/iconv/: CMakeLists.txt
cmake/ext/json/: CMakeLists.txt
cmake/ext/libxml/: CMakeLists.txt
cmake/ext/mysqli/: CMakeLists.txt
cmake/ext/openssl/: CMakeLists.txt
cmake/ext/pcre/: CMakeLists.txt
cmake/ext/pdo/: CMakeLists.txt
cmake/ext/pdo_mysql/: CMakeLists.txt
cmake/ext/pdo_sqlite/: CMakeLists.txt
cmake/ext/phar/: CMakeLists.txt
cmake/ext/posix/: CMakeLists.txt
cmake/ext/reflection/: CMakeLists.txt
cmake/ext/session/: CMakeLists.txt
cmake/ext/simplexml/: CMakeLists.txt
cmake/ext/spl/: CMakeLists.txt
cmake/ext/sqlite3/: CMakeLists.txt
cmake/ext/standard/: CMakeLists.txt
cmake/ext/tokenizer/: CMakeLists.txt
cmake/ext/xml/: CMakeLists.txt
cmake/ext/xmlreader/: CMakeLists.txt
cmake/ext/xmlwriter/: CMakeLists.txt
cmake/main/: CMakeLists.txt  build-defs.h.cmake  php_config.h.cmake
cmake/sapi/cli/: CMakeLists.txt
